--- a/lib/templates/meanstack/public/views/index.jade
+++ b/lib/templates/meanstack/public/views/index.jade
@@ -1,13 +1,5 @@
-extends layout
+extends partials/layout
 
-block body
-    div(ng-controller='')
-
-    footer
-        script
-            var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
-            (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-            g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
-            s.parentNode.insertBefore(g,s)}(document,'script'));
-
-        script( src='scripts/requires/angular/angular.js' )
+block content
+    h1= title
+    p Welcome to #{title}
