--- a/lib/templates/nodeapp/app/views/index.jade
+++ b/lib/templates/nodeapp/app/views/index.jade
@@ -1,10 +1,9 @@
-extends layout
+extends partials/layout
 
 block header
-    div id="header"
 
 block content
-    div id="content"
+    h1= title
+    p Welcome to #{title}
 
 block footer
-    div id="footer"
