--- a/lib/templates/benmstack/app/views/partials/layout.jade
+++ b/lib/templates/benmstack/app/views/partials/layout.jade
@@ -2,19 +2,17 @@ doctype html
 html
     head
         meta(charset='utf-8')
-        meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
         title=title
         meta(name="description", content=description)
         meta(name="author", content=author)
         meta(name="viewport", content='width=device-width')
-        link(rel='stylesheet', href='/css/style.css')
-        //- script(src='js/vendor/modernizr-2.6.2.min.js')
+        link(rel='stylesheet', href='/css/app.css')
     body
 
         block content
 
         footer
-        //- script(src='//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js')
-        //- script(src='js/vendor/jquery-1.10.2.min.js')
-        //- script(defer, src='js/plugins.js')
-        script(defer, src='/js/script.js')
+            //- script(src='//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js')
+            //- script
+              window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\\/script>')
+            script(defer, src='/js/app.js')
