--- a/lib/templates/nodeapp/app/views/error.jade
+++ b/lib/templates/nodeapp/app/views/error.jade
@@ -3,7 +3,7 @@ extends partials/layout
 block header
 
 block content
-    h1= title
-    p Please, login...
+    h1= error
+    p #{message} - #{error}.
 
 block footer
