--- a/lib/templates/meanstack/app/views/about.jade
+++ b/lib/templates/meanstack/app/views/about.jade
@@ -1,9 +1,5 @@
-extends partials/layout
-
-block header
+extends layouts/layout
 
 block content
     h1= title
-    p Welcome to #{title}
-
-block footer
+    p Welcome to #{title}.
