--- a/lib/templates/nodeapp/app/views/partials/footer.jade
+++ b/lib/templates/nodeapp/app/views/partials/footer.jade
@@ -1,15 +1,11 @@
 footer
     .container
         p
-            | Copyright © #{moment().format('YYYY')}&nbsp;
-            | &nbsp;#{application}, all rights reserved. |&nbsp;
+            | Copyright © #{moment().format('YYYY')}
+            | #{application}, all rights reserved.
 
 //- Javascript
 //- ! Place scripts in footer for faster page rendering !
-script(src='/lib/jquery/dist/jquery.min.js')
-//- Then we use jQuery to async load everything else!
-script.
-    $(document).ready(function() {
-        // Load main project js
-        $.getScript('/assets/scripts/#{application}.min.js');
-    });
+//- script(src='//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js')
+//- script(src='/assets/scripts/vendor/jquery-1.10.2.min.js')
+script(defer, src='assets/scripts/main.js')
