--- a/lib/templates/general/index.html
+++ b/lib/templates/general/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width">
 
     <link rel="stylesheet" href="assets/css/style.css">
-    <script src="assets/js/vendor/modernizr-2.6.2.min.js"></script>
+    <script src="assets/scripts/vendor/modernizr-2.6.2.min.js"></script>
 
     <!--[if lt IE 9]>
         window.location.href = "http://domain.com/ie/";
@@ -26,9 +26,9 @@
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script>
-        window.jQuery || document.write('<script src="assets/js/vendor/jquery-1.10.2.min.js"><\/script>')
+        window.jQuery || document.write('<script src="assets/scripts/vendor/jquery-1.10.2.min.js"><\/script>')
     </script>
-    <script src="assets/js/app.min.js"></script>
+    <script src="assets/scripts/app.min.js"></script>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
@@ -37,6 +37,11 @@
         g.src='//www.google-analytics.com/ga.js';
         s.parentNode.insertBefore(g,s)}(document,'script'));
     </script>
+
+    <!-- Initialize Browser Sync -->
+    <script src='//192.168.0.106:3000/socket.io/socket.io.js'></script>
+    <script>var ___socket___ = io.connect('http://192.168.0.106:3000');</script>
+    <script src='//192.168.0.106:3001/client/browser-sync-client.0.8.2.js'></script>
 
 </body>
 </html>
