--- a/lib/templates/general/assets/styles/core/_mixins.scss
+++ b/lib/templates/general/assets/styles/core/_mixins.scss
@@ -61,7 +61,7 @@ $inputs-list: 'input[type="email"]',
 
 $unquoted-inputs-list: ();
 @each $input-type in $inputs-list {
-    $unquoted-inputs-list: append($unquoted-inputs-list, unquote($input-type), comma);
+    $unquoted-inputs-list: append($unquoted-inputs-list, unquote($input-type), comma) !global;
 }
 
 $all-text-inputs: $unquoted-inputs-list;
@@ -71,14 +71,14 @@ $all-text-inputs: $unquoted-inputs-list;
 $all-text-inputs-hover: ();
 @each $input-type in $unquoted-inputs-list {
     $input-type-hover: $input-type + ":hover";
-    $all-text-inputs-hover: append($all-text-inputs-hover, $input-type-hover, comma);
+    $all-text-inputs-hover: append($all-text-inputs-hover, $input-type-hover, comma) !global;
 }
 
 // Focus Pseudo-class
 $all-text-inputs-focus: ();
 @each $input-type in $unquoted-inputs-list {
     $input-type-focus: $input-type + ":focus";
-    $all-text-inputs-focus: append($all-text-inputs-focus, $input-type-focus, comma);
+    $all-text-inputs-focus: append($all-text-inputs-focus, $input-type-focus, comma) !global;
 }
 
 // Input Sizes
