--- a/lib/templates/jekyll/_includes/footer.html
+++ b/lib/templates/jekyll/_includes/footer.html
@@ -4,7 +4,7 @@
     <!-- Scripts -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="{{ site.baseurl }}assets/js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
-    <script src='{{ site.baseurl }}assets/js/app.min.js'></script>
+    <script src='{{ site.baseurl }}assets/js/main.min.js'></script>
 
     <!-- Google Analytics -->
     {% include analytics.html %}
