--- a/lib/templates/nodewebkit/app/styles/app/_helpers.scss
+++ b/lib/templates/nodewebkit/app/styles/app/_helpers.scss
@@ -1,7 +1,7 @@
 //
-// Custom Utility Classes
+// Helper Classes
 // --------------------------------------------------
 
-@if $use-custom == true {
+@if $use-helpers == true {
 
 }
