--- a/lib/templates/nodewebkit/app/styles/core/_config.scss
+++ b/lib/templates/nodewebkit/app/styles/core/_config.scss
@@ -14,7 +14,7 @@ $btn-type: "flat";
 $use-animations: true;
 
 // 4 - Would you like to use custom helpers instead of defaults?
-$use-custom: false;
+$use-helpers: false;
 
 
 
