--- a/lib/templates/nodewebkit/app/styles/helpers/_animation.scss
+++ b/lib/templates/nodewebkit/app/styles/helpers/_animation.scss
@@ -35,7 +35,7 @@
 }
 
 
-@if $use-animations == true {
+@if $use-animations == true and $use-helpers == false  {
 
     // YOUR CSS GOES HERE
     // @include keyframes(bounce);
