--- a/lib/templates/nodewebkit/app/styles/helpers/_buttons.scss
+++ b/lib/templates/nodewebkit/app/styles/helpers/_buttons.scss
@@ -2,7 +2,7 @@
 // Buttons
 // --------------------------------------------------
 
-@if $use-buttons == true {
+@if $use-buttons == true and $use-helpers == false  {
 
     // Button Structure
     .btn,
