--- a/lib/templates/nodewebkit/app/styles/helpers/_forms.scss
+++ b/lib/templates/nodewebkit/app/styles/helpers/_forms.scss
@@ -2,7 +2,7 @@
 // Forms Utility Classes
 // --------------------------------------------------
 
-@if $use-forms == true {
+@if $use-forms == true and $use-helpers == false  {
 
 
     // Forms Actions
