--- a/lib/templates/nodewebkit/app/styles/helpers/_links.scss
+++ b/lib/templates/nodewebkit/app/styles/helpers/_links.scss
@@ -2,6 +2,6 @@
 // Link Utility Classes
 // --------------------------------------------------
 
-@if $use-links == true {
+@if $use-links == true and $use-helpers == false  {
 
 }
