--- a/lib/templates/nodewebkit/app/styles/helpers/_tables.scss
+++ b/lib/templates/nodewebkit/app/styles/helpers/_tables.scss
@@ -2,7 +2,7 @@
 // Table Utility Classes
 // --------------------------------------------------
 
-@if $use-tables == true {
+@if $use-tables == true and $use-helpers == false  {
 
     // Condensed
     .table-condensed {
