--- a/lib/templates/nodewebkit/app/styles/general/_base.scss
+++ b/lib/templates/nodewebkit/app/styles/general/_base.scss
@@ -263,3 +263,229 @@ embed {
     height: auto;
     border: none;
 }
+
+
+//
+// Forms and Inputs
+// --------------------------------------------------
+
+// GENERAL STYLES
+
+// Make all forms have space below them
+form {
+    margin: 0 0 20px 0;
+}
+
+fieldset {
+    padding: 0;
+    margin: 0;
+    border: 0;
+}
+
+// Groups of fields with labels on top (legends)
+legend {
+    display: block;
+    width: 100%;
+    padding: 0;
+    margin-bottom: 20px;
+    font-size: $font-size-large + 3;
+    line-height: $base-line-height * 2;
+    color: $gray-dark;
+    border: 0;
+    border-bottom: 1px solid $gray-lighter;
+
+    // Small
+    small {
+        font-size: $base-font-size + 2;
+        color: $gray-darker;
+    }
+}
+
+// Set font for forms
+label,
+input,
+button,
+select,
+textarea {
+    font-size: $input-font-size;
+    font-weight: normal;
+    line-height: $base-line-height;
+}
+
+input,
+button,
+select,
+textarea {
+    font-family: $base-font-family;
+}
+
+// Identify controls by their labels
+label {
+    display: block;
+    margin-bottom: 5px;
+    color: $label-text;
+    font-size: $base-font-size -3;
+}
+
+// FORM CONTROLS
+// -------------------------
+
+// Shared size and type resets
+select,
+textarea,
+#{$all-text-inputs},
+.uneditable-input {
+    @include inline-block;
+    height: auto;
+    padding: $input-padding;
+    font-size: $input-font-size;
+    line-height: $base-line-height;
+    color: $input-text;
+    vertical-align: middle;
+    margin-left: 0;
+    margin-bottom: 0;
+}
+
+textarea {
+    height: auto;
+}
+
+textarea,
+#{$all-text-inputs},
+.uneditable-input {
+    @include transition(border linear 0.4s);
+    @include border-radius($input-border-radius);
+    background: $input-background;
+    border: 1px solid $input-border;
+
+    &:focus {
+        background: $input-background-hover;
+        border-color: $input-border-hover;
+        outline: 0;
+        outline: thin dotted \9;
+    }
+}
+
+// Position radios and checkboxes better
+input[type="radio"],
+input[type="checkbox"] {
+    margin: 4px 0 0;
+    line-height: normal;
+}
+
+input[type="file"],
+input[type="image"],
+input[type="submit"],
+input[type="reset"],
+input[type="button"],
+input[type="radio"],
+input[type="checkbox"] {
+    width: auto; // Override of generic input selector
+}
+
+// Set the height of select and file controls to match text inputs
+select,
+input[type="file"] {
+    line-height: 30px;
+}
+
+// Make select elements obey height by applying a border
+select {
+    width: 220px;
+    border: 1px solid $input-border;
+    background: $input-background;
+}
+
+// Make multiple select elements height not fixed
+select[multiple],
+select[size] {
+    height: auto;
+}
+
+// Focus for select, file, radio, and checkbox
+select:focus,
+input[type="file"]:focus,
+input[type="radio"]:focus,
+input[type="checkbox"]:focus {
+    @include tab-focus();
+}
+
+// Placeholder
+// -------------------------
+
+// Placeholder text gets special styles because when browsers invalidate entire lines if it doesn't understand a selector
+input,
+textarea {
+    @include placeholder();
+}
+
+
+// Disabled State
+input[disabled],
+select[disabled],
+textarea[disabled],
+input[readonly],
+select[readonly],
+textarea[readonly] {
+    cursor: not-allowed;
+    background-color: $input-disabled-background;
+}
+
+input[type="radio"][disabled],
+input[type="checkbox"][disabled],
+input[type="radio"][readonly],
+input[type="checkbox"][readonly] {
+    background-color: transparent;
+}
+
+
+//
+// Tables
+// --------------------------------------------------
+
+table {
+    max-width: 100%;
+    background-color: $table-background;
+    border-collapse: collapse;
+    border-spacing: 0;
+    width: 100%;
+    margin-bottom: $base-line-height;
+
+    // Cells
+    th,
+    td {
+        padding: 8px;
+        line-height: $base-line-height;
+        text-align: left;
+        vertical-align: top;
+        border-top: 1px solid $table-border;
+    }
+    th {
+        font-weight: bold;
+    }
+
+    // Bottom align for column headings
+    thead th {
+        vertical-align: bottom;
+    }
+
+    // Remove top border from thead by default
+    caption + thead tr:first-child th,
+    caption + thead tr:first-child td,
+    colgroup + thead tr:first-child th,
+    colgroup + thead tr:first-child td,
+    thead:first-child tr:first-child th,
+    thead:first-child tr:first-child td {
+        border-top: 0;
+    }
+
+    // Account for multiple tbody instances
+    tbody + tbody {
+        border-top: 2px solid $table-border;
+    }
+
+    // Nesting
+    .table {
+        background-color: $background-color;
+    }
+}
