--- a/lib/templates/nodewebkit/app/styles/core/_config.scss
+++ b/lib/templates/nodewebkit/app/styles/core/_config.scss
@@ -41,7 +41,7 @@ $columns:               12;
 // You can also use the "_custom.scss" file to include your own helpers classes
 // By doing this, i think its more apropieta disable all the following helpers
 
-$use-global:         true;  // Global
+$use-globals:        true;  // Global
 $use-types:          true;  // Types and Headings
 $use-links:          true;  // Links
 $use-lists:          true;  // Lists
