--- a/lib/templates/sinatra/app/views/index.erb
+++ b/lib/templates/sinatra/app/views/index.erb
@@ -9,12 +9,13 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
+        <meta name="google-site-verification" content="" />
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-        <link rel="stylesheet" href="/css/normalize.css">
-        <link rel="stylesheet" href="/css/main.css">
-        <script src="/js/vendor/modernizr-2.6.2.min.js"></script>
+        <link rel="stylesheet" href="../../public/styles/normalize.css">
+        <link rel="stylesheet" href="../../public/styles/main.css">
+        <script src="../../public/scripts/vendor/modernizr-2.6.2.min.js"></script>
 
         <style>
             /* Remove this style block */
@@ -35,7 +36,7 @@
                 margin:100px auto 0 auto;
                 background-color:#fff;
                 padding:20px;
-                -moz-box-shadow: 0 0 8px rgba(0,0,0,.16); 
+                -moz-box-shadow: 0 0 8px rgba(0,0,0,.16);
                 -webkit-box-shadow: 0 0 8px rgba(0,0,0,.16);
                 box-shadow: 0 0 8px rgba(0,0,0,.16);
             }
@@ -57,21 +58,23 @@
             </p>
             <ul>
                 <li><a href="/auth/signup" title="Create an account">Create an account</a></li>
-                <li><a href="/auth/login" title="Log in to your account">Log in to your account</a></li>                
+                <li><a href="/auth/login" title="Log in to your account">Log in to your account</a></li>
             </ul>
         </section>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="/js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
-        <script src="/js/plugins.js"></script>
-        <script src="/js/main.js"></script>
+        <script src="../../public/scripts/plugins.js"></script>
+        <script src="../../public/scripts/main.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
-            var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
-            (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-            g.src='//www.google-analytics.com/ga.js';
-            s.parentNode.insertBefore(g,s)}(document,'script'));
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+          ga('create', 'UA-XXXXXXXX-X', 'auto');
+          ga('send', 'pageview');
         </script>
     </body>
 </html>
