--- a/init/templates/jekyll/_includes/header.html
+++ b/init/templates/jekyll/_includes/header.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html class="no-js" lang="en">
 <head>
 
-    <title>{{ page.title }}</title>
-
-    <!-- Meta -->
-    <meta charset="utf-8"/>
+    <meta charset="utf-8">
+    <meta name="robots" content="noindex,nofollow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="description" content="{{ site.description }}" />
 
-    <!-- Facebook -->
+    <title>{{ page.title }}</title>
+
     <meta property="og:title" content="{{ page.title }}"/>
     <meta property="og:site_name" content="Blog - Vitor Britto"/>
     <meta property="og:url" content="{{ site.url }}{% if page.url != 'index.html' %}{{ page.url }}{% endif %}"/>
