Update Node Webkit Template

--- a/init/templates/nodewebkit/app/index.html
+++ b/init/templates/nodewebkit/app/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
-    <head>
+<html class="no-js" lang="en">
+<head>
+    <meta charset="utf-8">
     <title>Node Webkit App</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
