--- a/init/templates/webapp/public/index.html
+++ b/init/templates/webapp/public/index.html
@@ -1,28 +1,43 @@
-<!DOCTYPE HTML>
-<html>
+<!DOCTYPE html>
+<html class="no-js" lang="en">
 <head>
-    <title>Reminder</title>
-    <!-- Load Stylesheet -->
+    <meta charset="utf-8">
+    <meta name="robots" content="noindex,nofollow">
+
+    <title></title>
+
+    <!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" /><![endif]-->
+
+    <meta name="description" content="">
+    <meta name="keywords" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="" />
+    <link type="text/plain" rel="author" href="humans.txt" />
+
+    <!-- Load Favicons -->
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/images/apple-144.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/images/apple-114.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/images/apple-72.png">
+    <link rel="apple-touch-icon-precomposed" href="assets/images/apple-57.png">
+    <link rel="shortcut icon" href="assets/images/favicon.png">
+
+    <!-- Load Styles -->
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet">
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
-    <style>
-        .jumbotron {
-            margin-top: 30px;
-        }
-    </style>
-    <!-- Load Libraries -->
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/zepto/1.1.3/zepto.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.1.2/backbone-min.js"></script>
+    <link href="assets/styles/style.min.css" rel="stylesheet">
 
     <!-- Load Scripts -->
-    <script src="assets/scripts/app/router.js"></script>
-    <script src="assets/scripts/app/models/task_model.js"></script>
-    <script src="assets/scripts/app/views/task_index.js"></script>
-    <script src="assets/scripts/app/views/task_row.js"></script>
-    <script src="assets/scripts/app/views/task_add.js"></script>
-    <script src="assets/scripts/app/views/task_edit.js"></script>
-    <script src="assets/scripts/app/views/task_list.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/zepto/1.1.3/zepto.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/backbone.js/1.1.2/backbone-min.js"></script>
+    <script src="assets/scripts/app.min.js"></script>
+
+    <!--[if lt IE 9]>
+    <script type="text/javascript">
+        window.location.href = "http://www.domain.com.br/ie/";
+    </script>
+    <![endif]-->
+
 </head>
 <body>
 
@@ -163,5 +178,23 @@
         Backbone.history.start();
 
     </script>
+
+    <script>
+
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-XXXXXXXX-X', 'auto');
+      ga('send', 'pageview');
+
+    </script>
+
+    <!-- Live Reload - DEVELOPMENT ONLY -->
+    <script type='text/javascript' id="__bs_script__">//<![CDATA[
+    document.write("<script async src='//HOST:3000/browser-sync/browser-sync-client.1.9.1.js'><\/script>".replace(/HOST/g, location.hostname).replace(/PORT/g, location.port));
+//]]></script>
+
 </body>
 </html>
