--- a/init/templates/reactflux/public/index.html
+++ b/init/templates/reactflux/public/index.html
@@ -41,9 +41,11 @@
     </script>
 
     <!-- Live Reload - DEVELOPMENT ONLY -->
-    <script type='text/javascript' id="__bs_script__">//<![CDATA[
-    document.write("<script async src='//HOST:3000/browser-sync/browser-sync-client.1.9.1.js'><\/script>".replace(/HOST/g, location.hostname).replace(/PORT/g, location.port));
-//]]></script>
+    <script type='text/javascript' id="__bs_script__">
+    //<![CDATA[
+        document.write("<script async src='//HOST:3000/browser-sync/browser-sync-client.1.9.2.js'><\/script>".replace(/HOST/g, location.hostname).replace(/PORT/g, location.port));
+    //]]>
+    </script>
 
 </body>
 </html>
