Update WordPress Boilerplate
- Update core functions
- Add some hooks
- Now using bootstrap
- HTML refactoring
- Assets refactoring
- Add languages files (*.pot, *.po, *.mo)
- Update Grunt tasks
- Update node modules versions
- and much more...

--- a/init/templates/wordpress/assets/styles/common/_global.scss
+++ b/init/templates/wordpress/assets/styles/common/_global.scss
@@ -1,1 +1,10 @@
+////////////////////////////////////////////////////////////////////
+//
+// GLOBAL HELPERS
+//
+////////////////////////////////////////////////////////////////////
 
+.is-hidden  { display: none; }
+.is-visible { display: block; }
+
+.active { }
