--- a/init/templates/wordpress/assets/styles/common/_variables.scss
+++ b/init/templates/wordpress/assets/styles/common/_variables.scss
@@ -1,9 +1,9 @@
-// Glyphicons font path
-$icon-font-path:        "../fonts/";
+////////////////////////////////////////////////////////////////////
+//
+// THEME VARIABLES
+//
+////////////////////////////////////////////////////////////////////
 
 // Grid settings
-$main-sm-columns:       12;
-$sidebar-sm-columns:    4;
-
-// Colors
-$brand-primary:         #27ae60;
+$content-columns:    12;
+$sidebar-columns:    4;
