--- a/init/templates/wordpress/assets/styles/components/_wp-classes.scss
+++ b/init/templates/wordpress/assets/styles/components/_wp-classes.scss
@@ -1,5 +1,8 @@
-// WordPress Generated Classes
-// http://codex.wordpress.org/CSS#WordPress_Generated_Classes
+////////////////////////////////////////////////////////////////////
+//
+// WORDPRESS CLASSES
+//
+////////////////////////////////////////////////////////////////////
 
 // Media alignment
 .alignnone {
