--- a/init/templates/wordpress/assets/styles/components/_grid.scss
+++ b/init/templates/wordpress/assets/styles/components/_grid.scss
@@ -1,10 +1,11 @@
-// Grid system
-.main {
-  @include make-sm-column($main-sm-columns);
-  .sidebar-primary & {
-    @include make-sm-column($main-sm-columns - $sidebar-sm-columns);
-  }
-}
-.sidebar {
-  @include make-sm-column($sidebar-sm-columns);
-}
+////////////////////////////////////////////////////////////////////
+//
+// GRID SYSTEM
+//
+////////////////////////////////////////////////////////////////////
+
+.main {}
+.main-content {}
+.full-width {}
+.content {}
+.sidebar {}
