--- a/init/templates/libs/wpplugin/assets/styles/src/public.sass
+++ b/init/templates/libs/wpplugin/assets/styles/src/public.sass
@@ -3,20 +3,20 @@
  * -------------------------------------------------------
  * Vitor Britto - v1.0.0
  *
- * Copyright (c) 2014 Vitor Britto
+ * Copyright (c) 2016 Vitor Britto
  * -------------------------------------------------------
  */
 
 
-@charset "UTF-8";
+@charset "UTF-8"
 
 // GETTING STARTED
-@import "compass";
+@import "compass"
 
 // CORE
-@import "config";
-@import "mixins";
-@import "globals";
+@import "config"
+@import "mixins"
+@import "globals"
 
 // MODULES
 
